#146874 - removing library under FSAtomic does not fire event